--- a/documentation/documentation.ipynb
+++ b/documentation/documentation.ipynb
@@ -2,12 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3afd3e6c-e731-4656-9d7e-31f41ab0888a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Union\n",
+    "\n",
     "import numpy as np\n",
+    "from numpy.typing import ArrayLike\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
@@ -21,19 +24,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4d9803ad-f38c-428b-9909-8e95f9ce7412",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ROOT = pathlib.Path(__file__).resolve().parent\n",
+    "import pathlib, sys\n",
+    "\n",
+    "ROOT = pathlib.Path().resolve().parent / \"benchmark\"\n",
     "sys.path.append(str(ROOT))\n",
     "import benchmark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "0460c1de-96b0-4e8e-8af6-ac62ecf33dae",
    "metadata": {},
    "outputs": [],
@@ -52,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8d439d24-0488-4f27-b984-f443398c4b59",
    "metadata": {},
    "outputs": [],
@@ -63,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c46498e8-c323-4835-aa9b-82135325b49a",
    "metadata": {},
    "outputs": [],
@@ -76,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "57685160-bbd0-403d-a433-7d5bcf1f6bad",
    "metadata": {},
    "outputs": [
@@ -101,21 +106,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "f484ac59-cf37-4250-a451-938b5732a03e",
+   "execution_count": 10,
+   "id": "6b1c1144-5c63-4a60-9ace-1867d4d86dbc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[\"Annotations\"] = np.NaN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "aab17399-2548-4a2d-bc1b-ce3d2a0b1c2e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "data[\"Annotations\"] = np.NaN\n",
+    "\n",
     "random_number_generator = np.random.RandomState(seed = 17)\n",
     "size_annotation = len(data[\"Brazil\"][3::4])\n",
     "\n",
@@ -134,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 11,
    "id": "514fed60-479c-48ef-bf97-1e55665423fd",
    "metadata": {},
    "outputs": [],
@@ -147,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 12,
    "id": "7bfdd055-8cd3-4434-8d09-04548f76cb37",
    "metadata": {},
    "outputs": [
@@ -157,19 +154,19 @@
        "Estimator(linear_constraint=array([0.5, 0.5]), quadratic_constraint_weight=0)"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "estimator = Estimator()\n",
+    "estimator = benchmark.Estimator()\n",
     "estimator.fit(high_frequency_data, low_frequency_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 13,
    "id": "d8ebcce5-4215-42d5-aab1-ae0e865bdc3f",
    "metadata": {},
    "outputs": [
@@ -182,7 +179,7 @@
        "       0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 14,
    "id": "47f6c1d5-a12c-4c1c-beb2-3e7727d09632",
    "metadata": {},
    "outputs": [
@@ -204,7 +201,7 @@
        "1.0"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 15,
    "id": "66972578-8660-482b-a796-69abd6a9c397",
    "metadata": {},
    "outputs": [
@@ -229,7 +226,7 @@
        "        2.0662,  2.5507])"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 16,
    "id": "682bf6c3-1463-4295-a059-2b42393fdacd",
    "metadata": {},
    "outputs": [
@@ -250,7 +247,7 @@
        "array([0.9494, 0.3139])"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 22,
    "id": "028bcbb2-cdb1-465f-8b01-9756c37885e7",
    "metadata": {},
    "outputs": [],
@@ -285,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 23,
    "id": "45a8a92f-fa6a-448c-98fd-6e6001fc7db7",
    "metadata": {},
    "outputs": [
@@ -295,19 +292,19 @@
        "Estimator(linear_constraint=array([0.5, 0.5]), quadratic_constraint_weight=0)"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "estimator = Estimator()\n",
+    "estimator = benchmark.Estimator()\n",
     "estimator.fit(high_frequency_data, low_frequency_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 24,
    "id": "749833b3-9cc4-4c09-8524-a59c727887a4",
    "metadata": {},
    "outputs": [
@@ -320,7 +317,7 @@
        "       0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 25,
    "id": "0702e76a-3f81-4337-9e2a-b588d8fdf0dd",
    "metadata": {},
    "outputs": [],
@@ -356,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 26,
    "id": "7c7e4bbf-3173-47e8-a0f9-94d50c99d091",
    "metadata": {},
    "outputs": [
@@ -366,13 +363,13 @@
        "Estimator(linear_constraint=array([1, 0]), quadratic_constraint_weight=0)"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "estimator = Estimator(linear_constraint=linear_constraint)\n",
+    "estimator = benchmark.Estimator(linear_constraint=linear_constraint)\n",
     "estimator.fit(high_frequency_data, low_frequency_data)"
    ]
   },
@@ -398,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 27,
    "id": "f3950d3e-814c-478e-a527-cee348d530ab",
    "metadata": {},
    "outputs": [],
@@ -435,10 +432,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 28,
    "id": "04315c08-10d4-4e36-85dd-836da3de947d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "upsampled_annotation = estimator.predict()\n",
     "estimator.score()"
@@ -446,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 29,
    "id": "2e66635d-026b-471a-84ca-3da2c9edd224",
    "metadata": {},
    "outputs": [
@@ -456,7 +464,7 @@
        "55456158173.50534"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,17 +475,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 30,
    "id": "e8e98b0f-113b-4d2c-836c-f9984c0a30fc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "60912165989.2041"
+       "23764077769.398872"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 31,
    "id": "d4416f38-fa7a-4e88-a769-209bb32409f2",
    "metadata": {},
    "outputs": [],
@@ -512,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 32,
    "id": "abba6467-80e0-493f-a951-76d8b7027ad7",
    "metadata": {},
    "outputs": [
@@ -522,19 +530,19 @@
        "Estimator(linear_constraint=array([0.5, 0.5]), quadratic_constraint_weight=1)"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "estimator = Estimator(quadratic_constraint_weight=quadratic_constraint_weight)\n",
+    "estimator = benchmark.Estimator(quadratic_constraint_weight=quadratic_constraint_weight)\n",
     "estimator.fit(high_frequency_data, low_frequency_data, annotation_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 33,
    "id": "b2bd9818-c37f-49ad-9878-99509db4ff27",
    "metadata": {},
    "outputs": [
@@ -544,7 +552,7 @@
        "1.0"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 34,
    "id": "ef515fed-b4e2-4e97-b094-5f06c44bbc66",
    "metadata": {},
    "outputs": [
@@ -566,7 +574,7 @@
        "55456158173.50534"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 35,
    "id": "4bc9f69a-a7de-40bc-be6d-e4dcc3972d2d",
    "metadata": {},
    "outputs": [
@@ -587,7 +595,7 @@
        "51595560844.11667"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 40,
    "id": "548cfb63-1ac3-42f4-92a5-f04e6d08fb7a",
    "metadata": {},
    "outputs": [],
@@ -654,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 41,
    "id": "8f5a83b4-e0f7-4331-a271-cd26983cb316",
    "metadata": {},
    "outputs": [],
@@ -667,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 42,
    "id": "624036c8-19d8-43c7-a3c9-3f4920127435",
    "metadata": {},
    "outputs": [
@@ -675,22 +683,22 @@
      "data": {
       "text/plain": [
        "Estimator(linear_constraint=array([0.5, 0.5]), quadratic_constraint_weight=0,\n",
-       "          solver=<function solver at 0x000001E87725F798>)"
+       "          solver=<function solver at 0x0000020F41A6AA68>)"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "estimator = Estimator(solver=solver)\n",
+    "estimator = benchmark.Estimator(solver=solver)\n",
     "estimator.fit(high_frequency_data, low_frequency_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 43,
    "id": "c18eae92-da56-4f88-9579-440d3a886915",
    "metadata": {},
    "outputs": [
@@ -700,7 +708,7 @@
        "1.0"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 44,
    "id": "ca6f9aae-4332-48c5-9c50-0ae589d710c6",
    "metadata": {},
    "outputs": [
@@ -722,7 +730,7 @@
        "55456158173.50534"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 45,
    "id": "1305dd68-2f44-4a90-a413-b13bdc2c6350",
    "metadata": {},
    "outputs": [
@@ -743,7 +751,7 @@
        "58648786695.14173"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "cf05bc73-c034-407b-af1f-b252eac183b5",
    "metadata": {},
    "outputs": [],
