--- a/documentation/users-guide.ipynb
+++ b/documentation/users-guide.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3afd3e6c-e731-4656-9d7e-31f41ab0888a",
+   "execution_count": 1,
+   "id": "5a5ca30a-b644-4723-a48d-59c5e32c2f51",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import libraries\n",
+    "import pathlib, sys\n",
     "from typing import Union\n",
     "\n",
     "import numpy as np\n",
@@ -15,7 +17,14 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "import statsmodels.tsa.interp\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
+    "# import benchmark library from source\n",
+    "ROOT = pathlib.Path().resolve().parent \n",
+    "sys.path.append(str(ROOT))\n",
+    "import benchmark\n",
+    "\n",
+    "# change configuration\n",
     "np.set_printoptions(precision = 4)\n",
     "pd.set_option(\"display.max_rows\", 15)\n",
     "pd.set_option(\"display.max_columns\", 10)\n",
@@ -23,22 +32,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "4d9803ad-f38c-428b-9909-8e95f9ce7412",
+   "cell_type": "markdown",
+   "id": "4acd4d9e-fb72-4148-95c0-b70fe9f47f9e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pathlib, sys\n",
+    "#### Data \n",
     "\n",
-    "ROOT = pathlib.Path().resolve().parent / \"benchmark\"\n",
-    "sys.path.append(str(ROOT))\n",
-    "import benchmark"
+    "We have data from the World Bank containing Gross Domestic Product. The dataset has 60 years of annual records spanning 1960 to 2020. We focus on the GDP of Australia and Brazil. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "0460c1de-96b0-4e8e-8af6-ac62ecf33dae",
    "metadata": {},
    "outputs": [],
@@ -56,8 +61,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dbd895b6-be50-4978-9835-b05793414322",
+   "metadata": {},
+   "source": [
+    "We down-sample the data about Brazil. We change the frequency from "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "8d439d24-0488-4f27-b984-f443398c4b59",
    "metadata": {},
    "outputs": [],
@@ -68,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "c46498e8-c323-4835-aa9b-82135325b49a",
    "metadata": {},
    "outputs": [],
@@ -81,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "57685160-bbd0-403d-a433-7d5bcf1f6bad",
    "metadata": {},
    "outputs": [
@@ -106,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "6b1c1144-5c63-4a60-9ace-1867d4d86dbc",
    "metadata": {},
    "outputs": [],
@@ -131,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "514fed60-479c-48ef-bf97-1e55665423fd",
    "metadata": {},
    "outputs": [],
@@ -144,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "7bfdd055-8cd3-4434-8d09-04548f76cb37",
    "metadata": {},
    "outputs": [
@@ -154,7 +167,7 @@
        "Estimator(linear_constraint=array([0.5, 0.5]), quadratic_constraint_weight=0)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "d8ebcce5-4215-42d5-aab1-ae0e865bdc3f",
    "metadata": {},
    "outputs": [
@@ -179,7 +192,7 @@
        "       0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "47f6c1d5-a12c-4c1c-beb2-3e7727d09632",
    "metadata": {},
    "outputs": [
@@ -201,7 +214,7 @@
        "1.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "66972578-8660-482b-a796-69abd6a9c397",
    "metadata": {},
    "outputs": [
@@ -226,7 +239,7 @@
        "        2.0662,  2.5507])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "682bf6c3-1463-4295-a059-2b42393fdacd",
    "metadata": {},
    "outputs": [
@@ -247,7 +260,7 @@
        "array([0.9494, 0.3139])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "028bcbb2-cdb1-465f-8b01-9756c37885e7",
    "metadata": {},
    "outputs": [],
@@ -282,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "45a8a92f-fa6a-448c-98fd-6e6001fc7db7",
    "metadata": {},
    "outputs": [
@@ -292,7 +305,7 @@
        "Estimator(linear_constraint=array([0.5, 0.5]), quadratic_constraint_weight=0)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "749833b3-9cc4-4c09-8524-a59c727887a4",
    "metadata": {},
    "outputs": [
@@ -317,7 +330,7 @@
        "       0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b6e0f6a-c4b3-4fde-8890-70fd54dde5e8",
+   "id": "375900e9-3f3b-4992-8b74-9979656bde7c",
    "metadata": {},
    "source": [
     "#### Second Experiment \n",
@@ -339,8 +352,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "0702e76a-3f81-4337-9e2a-b588d8fdf0dd",
+   "execution_count": 16,
+   "id": "5488688a-1c5d-44a8-b9b3-3ddf46c856ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,8 +366,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "7c7e4bbf-3173-47e8-a0f9-94d50c99d091",
+   "execution_count": 17,
+   "id": "f9da8889-fcbf-4893-a7c9-e9d489844e2d",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +376,7 @@
        "Estimator(linear_constraint=array([1, 0]), quadratic_constraint_weight=0)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,10 +388,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
-   "id": "c6c8c8e6-cbbc-4ad2-baf1-36c967eaea78",
+   "execution_count": 18,
+   "id": "1e0cc5f2-da88-42f9-922e-1bd6d2a48d34",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "upsampled_ = estimator.predict()\n",
     "upsampled_[::2] - data[\"Brazil\"].values[::2]"
@@ -386,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "753af379-daaa-4119-b614-9325bd291784",
+   "id": "1fec1878-e4f3-4b2c-9710-4f58726bf65e",
    "metadata": {},
    "source": [
     "Quadratic Constraint  \n",
@@ -395,8 +420,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "f3950d3e-814c-478e-a527-cee348d530ab",
+   "execution_count": 19,
+   "id": "ee3ebf53-6cf0-41a9-a1c7-b4ee4f13a260",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,8 +435,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
-   "id": "979c6643-b680-4db1-b9fa-c6a9599ce87a",
+   "execution_count": 20,
+   "id": "a60c12e5-5776-4958-870a-caeb6591e411",
    "metadata": {},
    "outputs": [
     {
@@ -420,29 +445,29 @@
        "Estimator(linear_constraint=array([0.5, 0.5]), quadratic_constraint_weight=1)"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "estimator = Estimator(quadratic_constraint_weight=quadratic_constraint_weight)\n",
+    "estimator =  benchmark.Estimator(quadratic_constraint_weight=quadratic_constraint_weight)\n",
     "estimator.fit(high_frequency_data, low_frequency_data, annotation_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "04315c08-10d4-4e36-85dd-836da3de947d",
+   "execution_count": 21,
+   "id": "142eefc2-6dc0-47c8-a14a-eb61ed08b180",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.9999999999999998"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,8 +479,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "2e66635d-026b-471a-84ca-3da2c9edd224",
+   "execution_count": 22,
+   "id": "08b9bd98-e30d-463e-bc8b-3992f097c4e9",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +489,7 @@
        "55456158173.50534"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,17 +500,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "e8e98b0f-113b-4d2c-836c-f9984c0a30fc",
+   "execution_count": 23,
+   "id": "23afecf7-fb4d-41a2-adab-bfab23ce0adb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "23764077769.398872"
+       "60912165989.2041"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b07c55e-651f-43af-850f-8012000b40ef",
+   "id": "b4285af1-e505-4b6d-8e33-2de3b17e16df",
    "metadata": {},
    "source": [
     "Exact"
@@ -504,8 +529,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "d4416f38-fa7a-4e88-a769-209bb32409f2",
+   "execution_count": 24,
+   "id": "6a5944ee-35b5-4404-851d-82913ca5a04d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,8 +545,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "abba6467-80e0-493f-a951-76d8b7027ad7",
+   "execution_count": 25,
+   "id": "ca70813b-1f22-483f-8836-5435422efe25",
    "metadata": {},
    "outputs": [
     {
@@ -530,20 +555,20 @@
        "Estimator(linear_constraint=array([0.5, 0.5]), quadratic_constraint_weight=1)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "estimator = benchmark.Estimator(quadratic_constraint_weight=quadratic_constraint_weight)\n",
+    "estimator =  benchmark.Estimator(quadratic_constraint_weight=quadratic_constraint_weight)\n",
     "estimator.fit(high_frequency_data, low_frequency_data, annotation_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "b2bd9818-c37f-49ad-9878-99509db4ff27",
+   "execution_count": 26,
+   "id": "d87528a7-3b8c-4a53-87d5-25ec42b563ba",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +577,7 @@
        "1.0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,8 +589,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "ef515fed-b4e2-4e97-b094-5f06c44bbc66",
+   "execution_count": 27,
+   "id": "459d7137-64e6-46e3-b26d-f5486dc0dcff",
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +599,7 @@
        "55456158173.50534"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,8 +610,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "4bc9f69a-a7de-40bc-be6d-e4dcc3972d2d",
+   "execution_count": 28,
+   "id": "a2fc0dcd-10d8-482a-b4b3-38aa20d59672",
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +620,7 @@
        "51595560844.11667"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "id": "548cfb63-1ac3-42f4-92a5-f04e6d08fb7a",
    "metadata": {},
    "outputs": [],
@@ -662,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "id": "8f5a83b4-e0f7-4331-a271-cd26983cb316",
    "metadata": {},
    "outputs": [],
@@ -675,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "id": "624036c8-19d8-43c7-a3c9-3f4920127435",
    "metadata": {},
    "outputs": [
@@ -683,10 +708,10 @@
      "data": {
       "text/plain": [
        "Estimator(linear_constraint=array([0.5, 0.5]), quadratic_constraint_weight=0,\n",
-       "          solver=<function solver at 0x0000020F41A6AA68>)"
+       "          solver=<function solver at 0x00000268DAB7A798>)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 32,
    "id": "c18eae92-da56-4f88-9579-440d3a886915",
    "metadata": {},
    "outputs": [
@@ -708,7 +733,7 @@
        "1.0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 33,
    "id": "ca6f9aae-4332-48c5-9c50-0ae589d710c6",
    "metadata": {},
    "outputs": [
@@ -730,7 +755,7 @@
        "55456158173.50534"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 34,
    "id": "1305dd68-2f44-4a90-a413-b13bdc2c6350",
    "metadata": {},
    "outputs": [
@@ -751,7 +776,7 @@
        "58648786695.14173"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 62,
    "id": "cf05bc73-c034-407b-af1f-b252eac183b5",
    "metadata": {},
    "outputs": [],
@@ -786,82 +811,95 @@
     "# input data \n",
     "\n",
     "high_frequency_data = data[\"Australia\"].values\n",
-    "low_frequency_data = data[\"Brazil_Downsample\"].dropna().values\n",
-    "annotation_data = data[\"Annotations\"].values"
+    "low_frequency_data = data[\"Brazil_Downsample\"].dropna().values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 63,
+   "id": "8ebd600d-0a44-4a15-b1f2-5678cfb2d196",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frequency = len(high_frequency_data) // len(low_frequency_data)\n",
+    "high_frequency_data_reshaped = high_frequency_data.reshape(-1, frequency)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "1b075754-df4b-4b15-aac9-7d9ba605d1a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y = np.meshgrid(np.arange(0,5,1), np.arange(0,5,1))\n",
+    "x, y = x.flatten(), y.flatten()\n",
+    "linear_constraint_params = [np.asarray(pair) for pair in zip(x,y)][1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "id": "4d596f31-83ec-4075-990a-7bc42395a37e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimator = Estimator()\n",
-    "for weight in np.logspace(-2,2,num = 5):\n",
-    "\n",
-    "predictor = GridSearchCV(Estimator_(), tuned_parameters)"
+    "tunable_parameters = {\"linear_constraint\": linear_constraint_params}\n",
+    "predictor = GridSearchCV(benchmark.Estimator(), tunable_parameters, cv = 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
-   "id": "935ef5aa-7b2c-4feb-a218-bf68161b974a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "upsampled_annotation = estimator.predict()\n",
-    "estimator.score()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 211,
-   "id": "f66db3ac-dce0-4270-889f-038d09252061",
+   "execution_count": 66,
+   "id": "d93d354b-02ef-4767-bcbf-0fb6c1f2392b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "55456158173.50534"
+       "GridSearchCV(cv=2, estimator=Estimator(),\n",
+       "             param_grid={'linear_constraint': [array([1, 0]), array([2, 0]),\n",
+       "                                               array([3, 0]), array([4, 0]),\n",
+       "                                               array([0, 1]), array([1, 1]),\n",
+       "                                               array([2, 1]), array([3, 1]),\n",
+       "                                               array([4, 1]), array([0, 2]),\n",
+       "                                               array([1, 2]), array([2, 2]),\n",
+       "                                               array([3, 2]), array([4, 2]),\n",
+       "                                               array([0, 3]), array([1, 3]),\n",
+       "                                               array([2, 3]), array([3, 3]),\n",
+       "                                               array([4, 3]), array([0, 4]),\n",
+       "                                               array([1, 4]), array([2, 4]),\n",
+       "                                               array([3, 4]), array([4, 4])]})"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.average(np.abs(data[\"Brazil\"].values - upsampled))"
+    "predictor.fit(high_frequency_data_reshaped, low_frequency_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
-   "id": "767007fb-c2dc-4a4a-9708-be2ffb9c1c8b",
+   "execution_count": 67,
+   "id": "7eebcd84-56d1-4b14-84cf-cfaf9e0ec523",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "60912165989.2041"
+       "{'linear_constraint': array([1, 0])}"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.average(np.abs(data[\"Brazil\"].values - upsampled_annotation))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9861ef5d-3991-44d2-88e7-48fa27c14434",
-   "metadata": {},
-   "source": [
-    "Linear constraint"
+    "predictor.best_params_"
    ]
   }
  ],
