Complete users guide

--- a/documentation/users-guide.ipynb
+++ b/documentation/users-guide.ipynb
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 209,
    "id": "e8ca9b01-acf7-459a-a4f4-5dbdd69ec8db",
    "metadata": {},
    "outputs": [],
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 216,
    "id": "94aeb196-fdda-4128-b966-e0ae5608ef55",
    "metadata": {},
    "outputs": [
@@ -445,7 +445,7 @@
        "Estimator(linear_constraint=array([0.5, 0.5]), quadratic_constraint_weight=0)"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 211,
    "id": "a2b503ba-1e61-4c58-b120-05ceb189981f",
    "metadata": {},
    "outputs": [
@@ -483,7 +483,7 @@
        "       0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 217,
    "id": "c9259057-9020-4eec-a808-ddf8046da02d",
    "metadata": {},
    "outputs": [],
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 221,
    "id": "d757616c-7497-470c-a721-3e913e2fbed3",
    "metadata": {},
    "outputs": [
@@ -534,77 +534,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error without Quadratic Constraint 55456158173.50534\n",
-      "Mean Absolute Error with Quadratic Constraint 60912165989.20409\n"
+      "Correlation without Quadratic Constraint 55456158173.50534\n",
+      "Correlation with Quadratic Constraint 60912165989.2041\n"
      ]
     }
    ],
    "source": [
-    "print(\"Mean Absolute Error without Quadratic Constraint {}\".format(np.average(np.abs(data[\"Brazil\"].values - interpolant))))\n",
-    "print(\"Mean Absolute Error with Quadratic Constraint {}\".format(np.average(np.abs(data[\"Brazil\"].values - interpolant_annotations))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 202,
-   "id": "e3f7930b-f8cd-4b75-a5d1-27c76e93d72a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9909516029131233"
-      ]
-     },
-     "execution_count": 202,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.corrcoef(data[\"Brazil\"].values, interpolant)[0,1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 203,
-   "id": "9826b070-cf44-4d3d-a5c6-f04cad1f0ae1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9869341066353553"
-      ]
-     },
-     "execution_count": 203,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.corrcoef(data[\"Brazil\"].values, interpolant_annotations)[0,1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 204,
-   "id": "a8eefc25-275c-4e71-9854-695cbb59f8cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9869331585033028"
-      ]
-     },
-     "execution_count": 204,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.corrcoef(data[\"Brazil\"].values, interpolant_annotations_exact)[0,1]"
+    "mae = np.average(np.abs(data[\"Brazil\"].values - interpolant))\n",
+    "mae_annotation = np.average(np.abs(data[\"Brazil\"].values - interpolant_annotations))\n",
+    "\n",
+    "print(f\"Mean Absolute Error without Quadratic Constraint {mae}\")\n",
+    "print(f\"Mean Absolute Error with Quadratic Constraint {mae_annotation}\")"
    ]
   },
   {
@@ -612,18 +552,18 @@
    "id": "3b66e9b5-fe80-466e-80f1-722da2aae618",
    "metadata": {},
    "source": [
-    "However the guesses were inexact. If we use better guesses, then we can improve the predictions."
+    "However the guesses were inexact. If we use more exact guesses, then we can improve the predictions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 219,
    "id": "ca70813b-1f22-483f-8836-5435422efe25",
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotation_data = np.full(len(data), np.NaN)\n",
-    "annotation_data[3::4] = data[\"Brazil\"][3::4].values\n",
+    "annotation_data = data[\"Brazil\"].copy()\n",
+    "annotation_data[::2] = np.NaN\n",
     "\n",
     "estimator =  benchmark.Estimator(quadratic_constraint_weight=quadratic_constraint_weight)\n",
     "estimator.fit(high_frequency_data, low_frequency_data, annotation_data)\n",
@@ -641,22 +581,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
-   "id": "4e4f2b36-1222-45ea-b914-c2f7ad7c2243",
+   "execution_count": 222,
+   "id": "9e7be930-d077-47e3-a0aa-0bebe232ce97",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error without Quadratic Constraint 60912165989.20409\n",
-      "Mean Absolute Error with Quadratic Constraint 60655956853.38882\n"
+      "Correlation without Quadratic Constraint 55456158173.50534\n",
+      "Correlation with Quadratic Constraint 51595560844.11667\n"
      ]
     }
    ],
    "source": [
-    "print(\"Mean Absolute Error without Quadratic Constraint {}\".format(np.average(np.abs(data[\"Brazil\"].values - interpolant_annotations))))\n",
-    "print(\"Mean Absolute Error with Quadratic Constraint {}\".format(np.average(np.abs(data[\"Brazil\"].values - interpolant_annotations_exact))))"
+    "mae_annotation_exact = np.average(np.abs(data[\"Brazil\"].values - interpolant_annotations_exact))\n",
+    "\n",
+    "print(f\"Mean Absolute Error without Quadratic Constraint {mae}\")\n",
+    "print(f\"Mean Absolute Error with Quadratic Constraint {mae_annotation_exact}\")"
    ]
   },
   {
@@ -664,12 +606,14 @@
    "id": "1360d0ff-66c4-4059-8140-7e0b7dbe5c5a",
    "metadata": {},
    "source": [
-    "#### Solvers"
+    "#### Solvers\n",
+    "\n",
+    "The `benchmark` library allows us to change the constraints for the optimization problem. Additionally, the `benchmark` library allows us to change the objective. The default objective is a multiplicative objective studying the difference of consecutive ratios between the high frequency data and the up-sampled data. We could change of an additive objective studying the difference of consecutive differences between the high frequency data and the up-sampled data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 223,
    "id": "548cfb63-1ac3-42f4-92a5-f04e6d08fb7a",
    "metadata": {},
    "outputs": [],
@@ -716,103 +660,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4ea1b58b-ade7-4be5-8347-2e3a0b5acd78",
+   "metadata": {},
+   "source": [
+    "Note that we have implemented an exact solver. We could have implemented an approximate solver with various libraries for optimization."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "8f5a83b4-e0f7-4331-a271-cd26983cb316",
+   "execution_count": 225,
+   "id": "ef82f34b-076f-4f83-b01c-0a43007619d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# input data \n",
-    "\n",
     "high_frequency_data = data[\"Australia\"].values\n",
-    "low_frequency_data = data[\"Brazil_Downsample\"].dropna().values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "624036c8-19d8-43c7-a3c9-3f4920127435",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Estimator(linear_constraint=array([0.5, 0.5]), quadratic_constraint_weight=0,\n",
-       "          solver=<function solver at 0x00000268DAB7A798>)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "low_frequency_data = data[\"Brazil_Downsample\"].dropna().values\n",
+    "\n",
     "estimator = benchmark.Estimator(solver=solver)\n",
-    "estimator.fit(high_frequency_data, low_frequency_data)"
+    "estimator.fit(high_frequency_data, low_frequency_data)\n",
+    "\n",
+    "interpolant_multiplicative = estimator.predict()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02a664e1-8955-4add-a905-cef116f1db92",
+   "metadata": {},
+   "source": [
+    "Note that the multiplicative objective gives more accurate predictions than the additive objective. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "c18eae92-da56-4f88-9579-440d3a886915",
+   "execution_count": 226,
+   "id": "76898ef3-3da1-46d5-9536-e00b74ad3026",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error without Quadratic Constraint 55456158173.50534\n",
+      "Mean Absolute Error with Quadratic Constraint 58648786695.14173\n"
+     ]
     }
    ],
    "source": [
-    "upsampled_additive = estimator.predict()\n",
-    "estimator.score()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "ca6f9aae-4332-48c5-9c50-0ae589d710c6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "55456158173.50534"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.average(np.abs(data[\"Brazil\"].values - upsampled))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "1305dd68-2f44-4a90-a413-b13bdc2c6350",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "58648786695.14173"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.average(np.abs(data[\"Brazil\"].values - upsampled_additive))"
+    "mae_multiplicative = np.average(np.abs(data[\"Brazil\"].values - interpolant_multiplicative))\n",
+    "\n",
+    "print(f\"Mean Absolute Error without Quadratic Constraint {mae}\")\n",
+    "print(f\"Mean Absolute Error with Quadratic Constraint {mae_multiplicative}\")"
    ]
   },
   {
@@ -820,36 +718,35 @@
    "id": "8f45d66d-a83b-47a8-9319-520dc58cf8d6",
    "metadata": {},
    "source": [
-    "#### Tuning"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "cf05bc73-c034-407b-af1f-b252eac183b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# input data \n",
+    "#### Tuning\n",
     "\n",
-    "high_frequency_data = data[\"Australia\"].values\n",
-    "low_frequency_data = data[\"Brazil_Downsample\"].dropna().values"
+    "The ability to adjust the linear constraint in the `benchmark` library allows us to programmatically determine the linear constraint. \n",
+    "\n",
+    "- Sum \n",
+    "- Average\n",
+    "- First Value \n",
+    "- Last Value \n",
+    "\n",
+    "A subject matter expert might suggest different linear constraints. However we can treat the linear constraint like a hyperparameter. Therefore we can employ hyperparameter search like grid search. Since the `benchmark` library adheres to the scikit-learn API, we can leverage the scikit-learn package to tune hyperparameters.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "8ebd600d-0a44-4a15-b1f2-5678cfb2d196",
+   "execution_count": 228,
+   "id": "924621da-ab65-448b-b5b4-21cd26c621e9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "high_frequency_data = data[\"Australia\"].values\n",
+    "low_frequency_data = data[\"Brazil_Downsample\"].dropna().values\n",
+    "\n",
     "frequency = len(high_frequency_data) // len(low_frequency_data)\n",
     "high_frequency_data_reshaped = high_frequency_data.reshape(-1, frequency)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 229,
    "id": "1b075754-df4b-4b15-aac9-7d9ba605d1a7",
    "metadata": {},
    "outputs": [],
@@ -861,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 230,
    "id": "4d596f31-83ec-4075-990a-7bc42395a37e",
    "metadata": {},
    "outputs": [],
@@ -872,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 231,
    "id": "d93d354b-02ef-4767-bcbf-0fb6c1f2392b",
    "metadata": {},
    "outputs": [
@@ -894,7 +791,7 @@
        "                                               array([3, 4]), array([4, 4])]})"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,8 +801,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e68d02ff-b474-4e93-8c2a-99e081dc88a3",
+   "metadata": {},
+   "source": [
+    "We learn that the First Value is the optimal linear constraint among the options."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 232,
    "id": "7eebcd84-56d1-4b14-84cf-cfaf9e0ec523",
    "metadata": {},
    "outputs": [
@@ -915,7 +820,7 @@
        "{'linear_constraint': array([1, 0])}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
