--- a/documentation/users-guide.ipynb
+++ b/documentation/users-guide.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "5a5ca30a-b644-4723-a48d-59c5e32c2f51",
    "metadata": {},
    "outputs": [],
@@ -22,13 +22,34 @@
     "# import benchmark library from source\n",
     "ROOT = pathlib.Path().resolve().parent \n",
     "sys.path.append(str(ROOT))\n",
-    "import benchmark\n",
+    "from benchmark.disaggregation import Estimator\n",
     "\n",
     "# change configuration\n",
     "np.set_printoptions(precision = 4)\n",
     "pd.set_option(\"display.max_rows\", 15)\n",
     "pd.set_option(\"display.max_columns\", 10)\n",
     "plt.rcParams[\"figure.figsize\"] = (25,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "d38f7316-bbeb-423d-bedf-047a9d66ccae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WindowsPath('C:/Users/richa/Documents/Code/bnym/benchmarking')"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ROOT"
    ]
   },
   {
@@ -43,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0460c1de-96b0-4e8e-8af6-ac62ecf33dae",
    "metadata": {},
    "outputs": [],
@@ -70,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8d439d24-0488-4f27-b984-f443398c4b59",
    "metadata": {},
    "outputs": [],
@@ -89,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c46498e8-c323-4835-aa9b-82135325b49a",
    "metadata": {},
    "outputs": [],
@@ -109,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "57685160-bbd0-403d-a433-7d5bcf1f6bad",
    "metadata": {},
    "outputs": [
@@ -144,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f93ea3ee-ec5b-453a-a043-c48effb65c59",
    "metadata": {},
    "outputs": [
@@ -154,7 +175,7 @@
        "Estimator(linear_constraint=array([0.5, 0.5]), quadratic_constraint_weight=0)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +184,7 @@
     "high_frequency_data = data[\"Australia\"].values\n",
     "low_frequency_data = data[\"Brazil_Downsample\"].dropna().values\n",
     "\n",
-    "estimator = benchmark.Estimator()\n",
+    "estimator = Estimator()\n",
     "estimator.fit(high_frequency_data, low_frequency_data)"
    ]
   },
@@ -177,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d8ebcce5-4215-42d5-aab1-ae0e865bdc3f",
    "metadata": {},
    "outputs": [
@@ -190,7 +211,7 @@
        "       0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "47f6c1d5-a12c-4c1c-beb2-3e7727d09632",
    "metadata": {},
    "outputs": [
@@ -224,7 +245,7 @@
        "1.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "872a2892-6e53-4a38-9a23-2d438086ca37",
    "metadata": {},
    "outputs": [
@@ -253,7 +274,7 @@
        "0.9909516029131233"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "66972578-8660-482b-a796-69abd6a9c397",
    "metadata": {},
    "outputs": [
@@ -286,7 +307,7 @@
        "        2.0662,  2.5507])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "682bf6c3-1463-4295-a059-2b42393fdacd",
    "metadata": {},
    "outputs": [
@@ -315,7 +336,7 @@
        "array([0.9494, 0.3139])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "0a55f24f-7b37-48ba-bc75-51469ab63f99",
    "metadata": {},
    "outputs": [
@@ -355,7 +376,7 @@
        "Estimator(linear_constraint=array([1, 0]), quadratic_constraint_weight=0)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +386,7 @@
     "low_frequency_data = data[\"Brazil_Downsample\"].dropna().values\n",
     "linear_constraint = [1,0]\n",
     "\n",
-    "estimator = benchmark.Estimator(linear_constraint=linear_constraint)\n",
+    "estimator = Estimator(linear_constraint=linear_constraint)\n",
     "estimator.fit(high_frequency_data, low_frequency_data)"
    ]
   },
@@ -379,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "id": "1e0cc5f2-da88-42f9-922e-1bd6d2a48d34",
    "metadata": {},
    "outputs": [
@@ -390,7 +411,7 @@
        "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 14,
    "id": "e8ca9b01-acf7-459a-a4f4-5dbdd69ec8db",
    "metadata": {},
    "outputs": [],
@@ -435,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 15,
    "id": "94aeb196-fdda-4128-b966-e0ae5608ef55",
    "metadata": {},
    "outputs": [
@@ -445,7 +466,7 @@
        "Estimator(linear_constraint=array([0.5, 0.5]), quadratic_constraint_weight=0)"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +477,7 @@
     "annotation_data = data[\"Annotations\"].values\n",
     "quadratic_constraint_weight = 0\n",
     "\n",
-    "estimator = benchmark.Estimator()\n",
+    "estimator = Estimator()\n",
     "estimator.fit(high_frequency_data, low_frequency_data)"
    ]
   },
@@ -470,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 16,
    "id": "a2b503ba-1e61-4c58-b120-05ceb189981f",
    "metadata": {},
    "outputs": [
@@ -483,7 +504,7 @@
        "       0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,14 +524,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 17,
    "id": "c9259057-9020-4eec-a808-ddf8046da02d",
    "metadata": {},
    "outputs": [],
    "source": [
     "quadratic_constraint_weight = 1\n",
     "\n",
-    "estimator =  benchmark.Estimator(quadratic_constraint_weight=quadratic_constraint_weight)\n",
+    "estimator =  Estimator(quadratic_constraint_weight=quadratic_constraint_weight)\n",
     "estimator.fit(high_frequency_data, low_frequency_data, annotation_data)\n",
     "\n",
     "interpolant_annotations = estimator.predict()"
@@ -526,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 18,
    "id": "d757616c-7497-470c-a721-3e913e2fbed3",
    "metadata": {},
    "outputs": [
@@ -534,8 +555,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correlation without Quadratic Constraint 55456158173.50534\n",
-      "Correlation with Quadratic Constraint 60912165989.2041\n"
+      "Mean Absolute Error without Quadratic Constraint 55456158173.50534\n",
+      "Mean Absolute Error with Quadratic Constraint 60912165989.2041\n"
      ]
     }
    ],
@@ -557,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 19,
    "id": "ca70813b-1f22-483f-8836-5435422efe25",
    "metadata": {},
    "outputs": [],
@@ -565,7 +586,7 @@
     "annotation_data = data[\"Brazil\"].copy()\n",
     "annotation_data[::2] = np.NaN\n",
     "\n",
-    "estimator =  benchmark.Estimator(quadratic_constraint_weight=quadratic_constraint_weight)\n",
+    "estimator =  Estimator(quadratic_constraint_weight=quadratic_constraint_weight)\n",
     "estimator.fit(high_frequency_data, low_frequency_data, annotation_data)\n",
     "\n",
     "interpolant_annotations_exact = estimator.predict()"
@@ -581,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 20,
    "id": "9e7be930-d077-47e3-a0aa-0bebe232ce97",
    "metadata": {},
    "outputs": [
@@ -589,8 +610,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correlation without Quadratic Constraint 55456158173.50534\n",
-      "Correlation with Quadratic Constraint 51595560844.11667\n"
+      "Mean Absolute Error without Quadratic Constraint 55456158173.50534\n",
+      "Mean Absolute Error with Quadratic Constraint 51595560844.11667\n"
      ]
     }
    ],
@@ -613,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 21,
    "id": "548cfb63-1ac3-42f4-92a5-f04e6d08fb7a",
    "metadata": {},
    "outputs": [],
@@ -669,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 22,
    "id": "ef82f34b-076f-4f83-b01c-0a43007619d0",
    "metadata": {},
    "outputs": [],
@@ -677,7 +698,7 @@
     "high_frequency_data = data[\"Australia\"].values\n",
     "low_frequency_data = data[\"Brazil_Downsample\"].dropna().values\n",
     "\n",
-    "estimator = benchmark.Estimator(solver=solver)\n",
+    "estimator = Estimator(solver=solver)\n",
     "estimator.fit(high_frequency_data, low_frequency_data)\n",
     "\n",
     "interpolant_multiplicative = estimator.predict()"
@@ -693,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 23,
    "id": "76898ef3-3da1-46d5-9536-e00b74ad3026",
    "metadata": {},
    "outputs": [
@@ -732,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 24,
    "id": "924621da-ab65-448b-b5b4-21cd26c621e9",
    "metadata": {},
    "outputs": [],
@@ -746,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 25,
    "id": "1b075754-df4b-4b15-aac9-7d9ba605d1a7",
    "metadata": {},
    "outputs": [],
@@ -758,18 +779,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 27,
    "id": "4d596f31-83ec-4075-990a-7bc42395a37e",
    "metadata": {},
    "outputs": [],
    "source": [
     "tunable_parameters = {\"linear_constraint\": linear_constraint_params}\n",
-    "predictor = GridSearchCV(benchmark.Estimator(), tunable_parameters, cv = 2)"
+    "predictor = GridSearchCV(Estimator(), tunable_parameters, cv = 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 28,
    "id": "d93d354b-02ef-4767-bcbf-0fb6c1f2392b",
    "metadata": {},
    "outputs": [
@@ -791,7 +812,7 @@
        "                                               array([3, 4]), array([4, 4])]})"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 29,
    "id": "7eebcd84-56d1-4b14-84cf-cfaf9e0ec523",
    "metadata": {},
    "outputs": [
@@ -820,7 +841,7 @@
        "{'linear_constraint': array([1, 0])}"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
